# ptcmd

./: .gitignore  404.html  CNAME  Makefile  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: lint.yml  test_cov.yml
api/: index.html
api/argument/: index.html
api/command/: index.html
api/completer/: index.html
api/core/: index.html
api/info/: index.html
docs/: .nav.yml  feature.md  feature.zh.md  index.md  index.zh.md  interactive_cli.md  interactive_cli.zh.md  start.md  start.zh.md
docs/examples/: index.md  index.zh.md
docs/user_guide/: argument.zh.md  command.zh.md  index.zh.md
examples/: docker.py  hello.py
feature/: index.html
interactive_cli/: index.html
search/: search_index.json
src/ptcmd/: __init__.py  argument.py  command.py  completer.py  constants.py  core.py  decorators.py  info.py  theme.py  version.py
start/: index.html
tests/: test_argument.py  test_base_cmd.py  test_command.py
tests/completer/: test_argparse.py
user_guide/: index.html
user_guide/argument/: index.html
user_guide/command/: index.html
user_guide/core/: index.html
zh/: index.html
zh/api/: index.html
zh/api/argument/: index.html
zh/api/command/: index.html
zh/api/completer/: index.html
zh/api/core/: index.html
zh/api/info/: index.html
zh/feature/: index.html
zh/interactive_cli/: index.html
zh/start/: index.html
zh/user_guide/: index.html
zh/user_guide/argument/: index.html
zh/user_guide/command/: index.html
zh/user_guide/core/: index.html
